tests/baselines/reference/for-of51.errors.txt
for-of51.ts(1,10): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
for-of51.ts(1,10): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.


==== for-of51.ts (2 errors) ====
    for (let let of []) {}
             ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
             ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.